schema/testdata/errors/set_attribute_backlink_repeated_lhs_fields.keel
model Record {
    fields {
        owner User?
        parent Record?
        children Record[]
    }

    actions {
        create createRecordWithChildren() {
            //expect-error:33:64:AttributeExpressionError:expression expected to resolve to type 'User' but it is 'User[]'
            @set(record.owner = ctx.identity.user.records.owner)
        }
    }
}

model User {
    fields {
        identity Identity {
            @unique
            @relation(user)
        }
        records Record[]
    }
}
